--- a/public/about.html
+++ b/public/about.html
@@ -116,7 +116,7 @@
                                 <input type="checkbox" id="faq-1">
                                 <h1><label for="faq-1">On Rhythm</label></h1>
                                 <div class="p">
-                                    <p>Silvia Rivera Cusicanqui, an Andean philosopher who is known for her contribution
+                                    <p style="color: rgb(255 255 212 / 75%);">Silvia Rivera Cusicanqui, an Andean philosopher who is known for her contribution
                                         to
                                         postcolonial and subaltern studies, writes about a “rhythm with the cosmos”.
                                         This
@@ -141,7 +141,7 @@
                                 <input type="checkbox" id="faq-2">
                                 <h1><label for="faq-2">Material Specificity</label></h1>
                                 <div class="p">
-                                    <p> This installation consists of salvaged discarded masts, spars and other maritime
+                                    <p style="color: rgb(255 255 212 / 75%);"> This installation consists of salvaged discarded masts, spars and other maritime
                                         wares donated from the museum-ship Sigyn, a wooden barque built in 1887 that
                                         crossed
                                         the oceans and seas for trade. As Seili is situated next to the old Baltic
@@ -163,7 +163,7 @@
                                 <input type="checkbox" id="faq-3">
                                 <h1><label for="faq-3">Popular Court History</label></h1>
                                 <div class="p">
-                                    <p> The Sigyn’s masts were previously erected in an installation named Midsummer
+                                    <p style="color: rgb(255 255 212 / 75%);"> The Sigyn’s masts were previously erected in an installation named Midsummer
                                         Mast in
                                         2020 (Fiskars) and 2021 (Turku). Following the pre-modern summer-solstice
                                         related
@@ -195,7 +195,7 @@
                                 <input type="checkbox" id="faq-4">
                                 <h1><label for="faq-4">Blue economy tribunal</label></h1>
                                 <div class="p">
-                                    <p> The 2022 EU Directive on Maritime Spatial Planning is the most recent blueprint
+                                    <p style="color: rgb(255 255 212 / 75%);"> The 2022 EU Directive on Maritime Spatial Planning is the most recent blueprint
                                         towards the full exploitation of marine & forest resources in the Baltic Sea;
                                         the
                                         response to the deep economic crisis ushered by the COVID pandemic. And yet, as
@@ -222,7 +222,7 @@
                                 <input type="checkbox" id="faq-5">
                                 <h1><label for="faq-5">Future tradition</label></h1>
                                 <div class="p">
-                                    <p>
+                                    <p style="color: rgb(255 255 212 / 75%);">
                                         <span style="display: block; padding:9px; ">
                                             <span style="font-style: italic; ">
                                                 “The question then becomes: what languages and visions will be appropriate to
@@ -259,7 +259,7 @@
                                 <input type="checkbox" id="faq-6">
                                 <h1><label for="faq-6">Legal ecologies</label></h1>
                                 <div class="p">
-                                    <p> 
+                                    <p style="color: rgb(255 255 212 / 75%);"> 
                                         Could we re-imagine law to advocate and nurture multispecies legal ecologies? 
                                         According to Elina Raitinen, an ecosystems approach to law is crucial because the legal mindset thus far, which is based on the freedom of man, has been devastating. 
                                         She explains that ownership and state sovereignty are the two organising principles of legal modernity. 
@@ -274,7 +274,7 @@
                                 <input type="checkbox" id="faq-7">
                                 <h1><label for="faq-7">Commoning</label></h1>
                                 <div class="p">
-                                    <p>Ilppo Vuorinen, former director of the Archipelago Research Institute, explicates
+                                    <p style="color: rgb(255 255 212 / 75%);">Ilppo Vuorinen, former director of the Archipelago Research Institute, explicates
                                         the mostly forgotten places of common use in the archipelago, the commons as
                                         sites
                                         of silent knowledge, and how that knowledge is disappearing with the
@@ -292,7 +292,7 @@
                                 <input type="checkbox" id="faq-8">
                                 <h1><label for="faq-8">Witness-seminar</label></h1>
                                 <div class="p">
-                                    <p> A Witness Seminar is a format in which people with a specialised interest around
+                                    <p style="color: rgb(255 255 212 / 75%);"> A Witness Seminar is a format in which people with a specialised interest around
                                         a
                                         topic, issue of concern, or an event, gather and verbally exchange, discuss, and
                                         debate with the aim of advancing critical dialogue on the matter of address.
@@ -321,7 +321,7 @@
                                 <input type="checkbox" id="faq-9">
                                 <h1><label for="faq-9">Commoning knowledge</label></h1>
                                 <div class="p">
-                                    <p> Another aspect of this project is a collaboration of building knowledges. The
+                                    <p style="color: rgb(255 255 212 / 75%);"> Another aspect of this project is a collaboration of building knowledges. The
                                         Sagalund museum director John Bjorman has discussed how in the Finnish
                                         Archipelago
                                         in the 19th Century, the Midsummer Pole tradition is a demonstration of the
@@ -340,7 +340,7 @@
                                 <input type="checkbox" id="faq-10">
                                 <h1><label for="faq-10">A convergence of practices</label></h1>
                                 <div class="p">
-                                    <p> 
+                                    <p style="color: rgb(255 255 212 / 75%);"> 
                                         <span style="display: block; padding:9px; ">
                                             <span style="font-style: italic; ">
                                                 “From ancient times through the present, it has been the weavers and astrologer-poets of the communities 
@@ -362,7 +362,7 @@
                                 <input type="checkbox" id="faq-11">
                                 <h1><label for="faq-11">Windsock</label></h1>
                                 <div class="p">
-                                    <p>Last but not least, in honour of one of the Archipelago Research Institute’s
+                                    <p style="color: rgb(255 255 212 / 75%);">Last but not least, in honour of one of the Archipelago Research Institute’s
                                         important protagonists and research focus, a herring indicator of wind speed and
                                         direction, reminding us to, amongst our other oceanic friends, to follow the
                                         herring.</p>
@@ -383,7 +383,7 @@
                                 <input id="ac-1" name="accordion-1" type="radio">
                                 <label for="ac-1">On Rhythm</label>
                                 <article class="ac-large">
-                                    <p>Silvia Rivera Cusicanqui, an Andean philosopher who is known for her contribution
+                                    <p style="color: rgb(255 255 212 / 75%);">Silvia Rivera Cusicanqui, an Andean philosopher who is known for her contribution
                                         to
                                         postcolonial and subaltern studies, writes about a “rhythm with the cosmos”.
                                         This
@@ -408,7 +408,7 @@
                                 <input id="ac-2" name="accordion-1" type="radio">
                                 <label for="ac-2">Material Specificity</label>
                                 <article class="ac-medium">
-                                    <p> This installation consists of salvaged discarded masts, spars and other maritime
+                                    <p style="color: rgb(255 255 212 / 75%);"> This installation consists of salvaged discarded masts, spars and other maritime
                                         wares donated from the museum-ship Sigyn, a wooden barque built in 1887 that
                                         crossed
                                         the oceans and seas for trade. As Seili is situated next to the old Baltic
@@ -430,7 +430,7 @@
                                 <input id="ac-3" name="accordion-1" type="radio">
                                 <label for="ac-3">Popular Court History</label>
                                 <article class="ac-larger">
-                                    <p> The Sigyn’s masts were previously erected in an installation named Midsummer
+                                    <p style="color: rgb(255 255 212 / 75%);"> The Sigyn’s masts were previously erected in an installation named Midsummer
                                         Mast in
                                         2020 (Fiskars) and 2021 (Turku). Following the pre-modern summer-solstice
                                         related
@@ -462,7 +462,7 @@
                                 <input id="ac-4" name="accordion-1" type="radio">
                                 <label for="ac-4">Blue economy tribunal</label>
                                 <article class="ac-large">
-                                    <p> The 2022 EU Directive on Maritime Spatial Planning is the most recent blueprint
+                                    <p style="color: rgb(255 255 212 / 75%);"> The 2022 EU Directive on Maritime Spatial Planning is the most recent blueprint
                                         towards the full exploitation of marine & forest resources in the Baltic Sea;
                                         the
                                         response to the deep economic crisis ushered by the COVID pandemic. And yet, as
@@ -489,7 +489,7 @@
                                 <input id="ac-5" name="accordion-1" type="radio">
                                 <label for="ac-5">Future tradition</label>
                                 <article class="ac-larger">
-                                    <p>
+                                    <p style="color: rgb(255 255 212 / 75%);">
                                         <span style="display: block; padding:9px; ">
                                             <span style="font-style: italic; ">
                                                 “The question then becomes: what languages and visions will be appropriate to
@@ -527,7 +527,7 @@
                                 <input id="ac-6" name="accordion-1" type="radio">
                                 <label for="ac-6">Legal ecologies</label>
                                 <article class="ac-small">
-                                    <p> <b>
+                                    <p style="color: rgb(255 255 212 / 75%);"> <b>
                                         Could we re-imagine law to advocate and nurture multispecies legal ecologies? 
                                         According to Elina Raitinen, an ecosystems approach to law is crucial because the legal mindset thus far, which is based on the freedom of man, has been devastating. 
                                         She explains that ownership and state sovereignty are the two organising principles of legal modernity. 
@@ -542,7 +542,7 @@
                                 <input id="ac-7" name="accordion-1" type="radio">
                                 <label for="ac-7">Commoning</label>
                                 <article class="ac-medium">
-                                    <p>Ilppo Vuorinen, former director of the Archipelago Research Institute, explicates
+                                    <p style="color: rgb(255 255 212 / 75%);">Ilppo Vuorinen, former director of the Archipelago Research Institute, explicates
                                         the mostly forgotten places of common use in the archipelago, the commons as
                                         sites
                                         of silent knowledge, and how that knowledge is disappearing with the
@@ -560,7 +560,7 @@
                                 <input id="ac-8" name="accordion-1" type="radio">
                                 <label for="ac-8">Witness-seminar</label>
                                 <article class="ac-large">
-                                    <p> A Witness Seminar is a format in which people with a specialised interest around
+                                    <p style="color: rgb(255 255 212 / 75%);"> A Witness Seminar is a format in which people with a specialised interest around
                                         a
                                         topic, issue of concern, or an event, gather and verbally exchange, discuss, and
                                         debate with the aim of advancing critical dialogue on the matter of address.
@@ -589,7 +589,7 @@
                                 <input id="ac-9" name="accordion-1" type="radio">
                                 <label for="ac-9">Commoning knowledge</label>
                                 <article class="ac-medium">
-                                    <p> Another aspect of this project is a collaboration of building knowledges. The
+                                    <p style="color: rgb(255 255 212 / 75%);"> Another aspect of this project is a collaboration of building knowledges. The
                                         Sagalund museum director John Bjorman has discussed how in the Finnish
                                         Archipelago
                                         in the 19th Century, the Midsummer Pole tradition is a demonstration of the
@@ -608,7 +608,7 @@
                                 <input id="ac-10" name="accordion-1" type="radio">
                                 <label for="ac-10">A convergence of practices</label>
                                 <article class="ac-small">
-                                    <p> 
+                                    <p style="color: rgb(255 255 212 / 75%);"> 
                                         <span style="display: block; padding:9px; ">
                                             <span style="font-style: italic; ">
                                                 “From ancient times through the present, it has been the weavers and astrologer-poets of the communities 
@@ -630,7 +630,7 @@
                                 <input id="ac-11" name="accordion-1" type="radio">
                                 <label for="ac-11">Windsock</label>
                                 <article class="ac-small">
-                                    <p>Last but not least, in honour of one of the Archipelago Research Institute’s
+                                    <p style="color: rgb(255 255 212 / 75%);">Last but not least, in honour of one of the Archipelago Research Institute’s
                                         important protagonists and research focus, a herring indicator of wind speed and
                                         direction, reminding us to, amongst our other oceanic friends, to follow the
                                         herring.</p>
@@ -646,7 +646,7 @@
 
                                     <!-- {/*---------------------------- footer----------- */} -->
                                     <footer class=" footermobile ">
-                                        <p>
+                                        <p style="color: rgb(255 255 212 / 75%);">
                                             Fields of May is commissioned by CAA as part of Spectres in Change, funded
                                             by
                                             Kone Foundation. It was inaugurated in the spring
@@ -1092,7 +1092,7 @@
 
                         <!-- {/*---------------------------- footer----------- */} -->
                         <footer class="footer">
-                            <p>
+                            <p style="color: rgb(255 255 212 / 75%);">
                                 Fields of May is commissioned by CAA as part of Spectres in Change, funded by Kone
                                 Foundation. It was inaugurated in the spring
                                 2022 in Seili as part of an exhibition and a public programme in collaboration with the
