--- a/public/index.html
+++ b/public/index.html
@@ -448,7 +448,7 @@ async function getData() {
                  document.getElementById("valueStatemobilehome").style.left  = "50%";
                  document.getElementById("valueStatemobilehome").style.top  = "51%";
                  document.getElementById("valueStatemobilehome").style.transform  = "translate(-50%, -50%)%";
-                 document.getElementById("valueStatemobilehome").style.position  = "absolute";
+                //  document.getElementById("valueStatemobilehome").style.position  = "absolute";
                  document.getElementById("valueStatemobilehome").style.pointerEvents  = "none";
 
                   document.querySelector("link[rel=apple-touch-icon]").setAttribute("href", "Excellent.ico")    
@@ -470,7 +470,7 @@ async function getData() {
                  document.getElementById("valueStatemobilehome").style.top  = "51%";
                  document.getElementById("valueStatemobilehome").style.lineHeight  = "8rem";
                  document.getElementById("valueStatemobilehome").style.transform  = "translate(-50%, -50%)%";
-                 document.getElementById("valueStatemobilehome").style.position  = "absolute";
+                //  document.getElementById("valueStatemobilehome").style.position  = "absolute";
                  document.getElementById("valueStatemobilehome").style.pointerEvents  = "none";
 
                   document.querySelector("link[rel=apple-touch-icon]").setAttribute("href", "Fair.ico")     
@@ -489,7 +489,7 @@ async function getData() {
                  document.getElementById("valueStatemobilehome").style.top  = "51%";
                  document.getElementById("valueStatemobilehome").style.lineHeight  = "8rem";
                  document.getElementById("valueStatemobilehome").style.transform  = "translate(-50%, -50%)%";
-                 document.getElementById("valueStatemobilehome").style.position  = "absolute";
+                //  document.getElementById("valueStatemobilehome").style.position  = "absolute";
                  document.getElementById("valueStatemobilehome").style.pointerEvents  = "none";
 
                   document.querySelector("link[rel=apple-touch-icon]").setAttribute("href", "Poor.ico")     
