--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,9 @@
                         <!-- </div> -->
                     </div>
                 </div>
-                <div class="column">
+                <div class="column" style="
+                padding-top: 2vh;
+            ">
                         <div class=" livetextmobile ">
                                     <!-- class="valueStatemobilehome" -->
                                     <span class="fairVision" id = "valueStatemobilehome">Fields <br/> of <br/> May</span>
