--- a/public/index.html
+++ b/public/index.html
@@ -93,10 +93,10 @@
                         <!-- </div> -->
                     </div>
                 </div>
-                <div class="column" style="
-                padding-top: 2vh;
-            ">
-                        <div class=" livetextmobile ">
+                <div>
+                        <div class=" livetextmobile " style="
+                        padding-top: 6vh !important;
+                    ">
                                     <!-- class="valueStatemobilehome" -->
                                     <span class="fairVision" id = "valueStatemobilehome">Fields <br/> of <br/> May</span>
                         </div>
