--- a/public/witness-seminar-in-seili.html
+++ b/public/witness-seminar-in-seili.html
@@ -50,7 +50,9 @@
             <!-- {/* <section class=" gradientTop "></section> */} -->
 
 
-            <section>
+            <section style="
+            background: radial-gradient(circle at center , #535353bf 0,#271d7cde 20%,#00002c, #050567 100%);
+        ">
                 <div class="popupmobile">
 
                     <div class="columnmobile">
@@ -199,7 +201,9 @@
     <div class=" container ">
         <!-- <BrowserView> -->
 
-        <main class=" main ">
+        <main class=" main " style="
+        background: radial-gradient(circle at center , #535353bf 0,#271d7cde 20%,#00002c, #050567 100%);
+    ">
 
 
             <section class=" centeredElements ">
